namespaces/scenarios/01-stuck-namespace-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  namespace: stuck-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx:alpine
