namespaces/scenarios/03-frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  namespace: frontend
spec:
  containers:
  - name: frontend
    image: busybox
    command: ["sleep", "3600"]
