namespaces/scenarios/10-isolation-test-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: isolated-pod
  namespace: isolated-ns
  labels:
    app: isolated
spec:
  containers:
  - name: app
    image: nginx:alpine
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: isolated-service
  namespace: isolated-ns
spec:
  selector:
    app: isolated
  ports:
  - port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: public-pod
  namespace: public-ns
spec:
  containers:
  - name: app
    image: busybox
    command: ["sleep", "3600"]
